--- a/examples/index.html
+++ b/examples/index.html
@@ -14,6 +14,14 @@
         <p>Small apps that show MVVM patterns, DI, and stores.</p>
       </header>
 
+      <section class="docs">
+        <a class="card" href="./docs/" style="--i: 1;">
+          <div class="card-title">Documents</div>
+          <div class="card-desc"></div>
+          <div class="card-meta">docs/</div>
+        </a>
+      </section>
+
       <section class="examples">
         <a class="card" href="./examples/todo-list/" style="--i: 1;">
           <div class="card-title">Todo List</div>
