--- a/examples/index.html
+++ b/examples/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mvvm-toolkit examples</title>
+    <title>rvm-toolkit examples</title>
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <main class="page">
       <header class="hero">
-        <div class="badge">mvvm-toolkit</div>
+        <div class="badge">rvm-toolkit</div>
         <h1>Examples</h1>
         <p>Small apps that show MVVM patterns, DI, and stores.</p>
       </header>
